--- a/p8105_hw3_zz2899.md
+++ b/p8105_hw3_zz2899.md
@@ -79,18 +79,14 @@ aisles sensibly, and organize your plot so others can read it.
 filter(grouped_by_aisle, n_obs>10000) %>% 
   ggplot(aes(x = aisle, y = n_obs)) + 
   geom_col()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 0.5, vjust = 0.5))+
-  knitr::opts_chunk$set(
-  fig.width = 6,
-  fig.asp = .6,
-  out.width = "90%"
-)
+  theme(axis.text.x = element_text(angle = 90, hjust = 0.5, vjust = 0.5))
 ```
 
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
-By look at the plot, we can get the same conclusion as in part 1: most
-items are ordered from packaged vegetables fruits, fresh vegetables, and
-fresh fruits.
+
+By looking at the plot, we can get the same conclusion as in part 1:
+most items are ordered from packaged vegetables fruits, fresh
+vegetables, and fresh fruits.
 
 **3.** Make a table showing the three most popular items in each of the
 aisles “baking ingredients”, “dog food care”, and “packaged vegetables
