--- a/p8105_hw3_zz2899.Rmd
+++ b/p8105_hw3_zz2899.Rmd
@@ -194,7 +194,7 @@ In2010
 
 **2.** Construct a dataset that is limited to `Excellent` responses, and contains, year, state, and a variable that averages the `data_value` across locations within a state. Make a "spaghetti" plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the `geom_line` geometry and `group` aesthetic will help).
 
-```{r}
+```{r warning=FALSE}
 ExcellentResp <-
   filter(tidyBRFSS, response == 'Excellent')%>%
   group_by(state, year)%>%
@@ -206,6 +206,17 @@ ExcellentResp%>%
     geom_point() + geom_line() + 
     theme(legend.position = "right")
 
+```
+
+**3.**Make a two-panel plot showing, for the years 2006, and 2010, distribution of `data_value` for responses (“Poor” to “Excellent”) among locations in NY State.
+```{r}
+filter(tidyBRFSS, year == 2006 | year == 2010)%>%
+  filter(state == "NY")%>%
+  select(data_value, year, response) %>%
+  ggplot(aes(x = data_value , color = response, fill = response)) +
+  geom_density(alpha = .5) + 
+  facet_grid(~year) + 
+  viridis::scale_fill_viridis(discrete = TRUE)
 ```
 
 
