--- a/p8105_hw3_zz2899.md
+++ b/p8105_hw3_zz2899.md
@@ -306,8 +306,20 @@ ExcellentResp%>%
     theme(legend.position = "right")
 ```
 
-    ## Warning: Removed 4 rows containing missing values (geom_point).
-
-    ## Warning: Removed 3 row(s) containing missing values (geom_path).
-
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+**3.**Make a two-panel plot showing, for the years 2006, and 2010,
+distribution of `data_value` for responses (“Poor” to “Excellent”) among
+locations in NY State.
+
+``` r
+filter(tidyBRFSS, year == 2006 | year == 2010)%>%
+  filter(state == "NY")%>%
+  select(data_value, year, response) %>%
+  ggplot(aes(x = data_value , color = response, fill = response)) +
+  geom_density(alpha = .5) + 
+  facet_grid(~year) + 
+  viridis::scale_fill_viridis(discrete = TRUE)
+```
+
+<img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
