--- a/p8105_hw3_zz2899.md
+++ b/p8105_hw3_zz2899.md
@@ -319,7 +319,118 @@ filter(tidyBRFSS, year == 2006 | year == 2010)%>%
   ggplot(aes(x = data_value , color = response, fill = response)) +
   geom_density(alpha = .5) + 
   facet_grid(~year) + 
+  scale_x_continuous(limits = c(0, 50)) +
   viridis::scale_fill_viridis(discrete = TRUE)
 ```
 
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+## Problem 3
+
+**1.** Load, tidy, and otherwise wrangle the data. Your final dataset
+should include all originally observed variables and values; have useful
+variable names; include a weekday vs weekend variable; and encode data
+with reasonable variable classes. Describe the resulting dataset
+(e.g. what variables exist, how many observations, etc).
+
+``` r
+accel_data <- 
+  read_csv("./data/accel_data.csv")%>%
+  janitor::clean_names()%>%
+  pivot_longer(activity_1:activity_1440,
+               names_to = "activity_counts",
+               values_to = "activity")%>%
+  separate(activity_counts, into = c("nothing", "activity_counts"), sep = "_")%>%
+  select(-nothing)%>%
+  mutate(activity_counts = as.numeric(activity_counts))%>%
+  #add a weekday vs weekend variabl
+  mutate(weekday_vs_weekend = ifelse(day == "Saturday" | day == "Sunday",  
+                                     "weekend", 
+                                     "weekday"))%>%
+  mutate(weekday_vs_weekend = as.factor(weekday_vs_weekend))
+```
+
+The resulting data set `accel_dataa` has 6 observations including the
+week, day\_id, day, activity\_counts, activity, weekday\_vs\_weekend.
+`day` is a character variable, `weekday_vs_weekend` is a factor variable
+containing only `weekday` and `weekend`, other variables are all
+numeric.
+
+**2.** Traditional analyses of accelerometer data focus on the total
+activity over the day. Using your tidied dataset, aggregate across
+minutes to create a total activity variable for each day, and create a
+table showing these totals. Are any trends apparent?
+
+``` r
+accel_data%>%
+  group_by(day_id)%>%
+  summarize(total_daily_acvitity = sum(activity))%>%
+  knitr::kable()
+```
+
+| day\_id | total\_daily\_acvitity |
+|--------:|-----------------------:|
+|       1 |              480542.62 |
+|       2 |               78828.07 |
+|       3 |              376254.00 |
+|       4 |              631105.00 |
+|       5 |              355923.64 |
+|       6 |              307094.24 |
+|       7 |              340115.01 |
+|       8 |              568839.00 |
+|       9 |              295431.00 |
+|      10 |              607175.00 |
+|      11 |              422018.00 |
+|      12 |              474048.00 |
+|      13 |              423245.00 |
+|      14 |              440962.00 |
+|      15 |              467420.00 |
+|      16 |              685910.00 |
+|      17 |              382928.00 |
+|      18 |              467052.00 |
+|      19 |              371230.00 |
+|      20 |              381507.00 |
+|      21 |              468869.00 |
+|      22 |              154049.00 |
+|      23 |              409450.00 |
+|      24 |                1440.00 |
+|      25 |              260617.00 |
+|      26 |              340291.00 |
+|      27 |              319568.00 |
+|      28 |              434460.00 |
+|      29 |              620860.00 |
+|      30 |              389080.00 |
+|      31 |                1440.00 |
+|      32 |              138421.00 |
+|      33 |              549658.00 |
+|      34 |              367824.00 |
+|      35 |              445366.00 |
+
+No obvious trends.
+
+**3.** Accelerometer data allows the inspection activity over the course
+of the day. Make a single-panel plot that shows the 24-hour activity
+time courses for each day and use color to indicate day of the week.
+Describe in words any patterns or conclusions you can make based on this
+graph.
+
+``` r
+accel_data%>%
+  group_by(activity_counts, day)%>%
+  summarize(mean_activity = mean(activity))%>%
+  ggplot(aes(x = activity_counts, y = mean_activity, color = day, fill = day))+
+  geom_smooth(se = FALSE) +
+  scale_x_continuous(
+    breaks = c(0, 120, 240, 360, 480, 600, 720, 840, 960, 1080, 1200, 1320, 1440), 
+    labels = c("0", "2", "4", "6", "8", "10", "12", "14", "16", "18", "20", "22", "24"),
+    limits = c(0, 1440)) +
+  labs(
+    title = "Activity over the day",
+    x = "Hours",
+    y = "Mean Activity",
+    caption = "Data from the rnoaa package")
+```
+
+<img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
+
+Activities are often lower before 6 am and after 11pm.
