--- a/p8105_hw3_zz2899.md
+++ b/p8105_hw3_zz2899.md
@@ -125,21 +125,21 @@ package_vegetable_fruits<-
 
 #Make a table
 bind_rows(baking_ingredients, dog_food_care, package_vegetable_fruits)%>%
-  select(aisle, everything())%>% 
+  select(product_name, aisle, everything())%>% 
   knitr::kable()
 ```
 
-| aisle                      | product\_name                                 | number\_ordered |
-|:---------------------------|:----------------------------------------------|----------------:|
-| baking ingredients         | Cane Sugar                                    |             336 |
-| baking ingredients         | Pure Baking Soda                              |             387 |
-| baking ingredients         | Light Brown Sugar                             |             499 |
-| dog food care              | Small Dog Biscuits                            |              26 |
-| dog food care              | Organix Chicken & Brown Rice Recipe           |              28 |
-| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |              30 |
-| packaged vegetables fruits | Organic Blueberries                           |            4966 |
-| packaged vegetables fruits | Organic Raspberries                           |            5546 |
-| packaged vegetables fruits | Organic Baby Spinach                          |            9784 |
+| product\_name                                 | aisle                      | number\_ordered |
+|:----------------------------------------------|:---------------------------|----------------:|
+| Cane Sugar                                    | baking ingredients         |             336 |
+| Pure Baking Soda                              | baking ingredients         |             387 |
+| Light Brown Sugar                             | baking ingredients         |             499 |
+| Small Dog Biscuits                            | dog food care              |              26 |
+| Organix Chicken & Brown Rice Recipe           | dog food care              |              28 |
+| Snack Sticks Chicken & Rice Recipe Dog Treats | dog food care              |              30 |
+| Organic Blueberries                           | packaged vegetables fruits |            4966 |
+| Organic Raspberries                           | packaged vegetables fruits |            5546 |
+| Organic Baby Spinach                          | packaged vegetables fruits |            9784 |
 
 Number of orders of top three most popular items of the aisle “packaged
 vegetables fruits” is much higher than that of “baking ingredients” and
@@ -416,9 +416,7 @@ graph.
 
 ``` r
 accel_data%>%
-  group_by(activity_counts, day)%>%
-  summarize(mean_activity = mean(activity))%>%
-  ggplot(aes(x = activity_counts, y = mean_activity, color = day, fill = day))+
+  ggplot(aes(x = activity_counts, y = activity, color = day, fill = day))+
   geom_smooth(se = FALSE) +
   scale_x_continuous(
     breaks = c(0, 120, 240, 360, 480, 600, 720, 840, 960, 1080, 1200, 1320, 1440), 
@@ -427,10 +425,11 @@ accel_data%>%
   labs(
     title = "Activity over the day",
     x = "Hours",
-    y = "Mean Activity",
-    caption = "Data from the rnoaa package")
+    y = "Activity")
 ```
 
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
 
-Activities are often lower before 6 am and after 11pm.
+Activities are often lower before 6 am and after 11pm. In general,
+activities at Sunday moon are higher than other days; activities at
+Friday night are higher than other days.
