--- a/p8105_hw3_zz2899.md
+++ b/p8105_hw3_zz2899.md
@@ -79,7 +79,10 @@ aisles sensibly, and organize your plot so others can read it.
 filter(grouped_by_aisle, n_obs>10000) %>% 
   ggplot(aes(x = aisle, y = n_obs)) + 
   geom_col()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 0.5, vjust = 0.5))
+  theme(axis.text.x = element_text(angle = 90, hjust = 0.5, vjust = 0.5))+
+  labs(title = "Number of Items Ordered in Each Aisle",
+       x = "Aisle",
+       y = "Number of items ordered")
 ```
 
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
@@ -231,6 +234,8 @@ tidyBRFSS <-
 **1.** In 2002, which states were observed at 7 or more locations? What
 about in 2010?
 
+States that were observed at 7 or more locations in 2002:
+
 ``` r
 In2002 <-
   filter(tidyBRFSS, year == 2002)%>%
@@ -252,6 +257,8 @@ In2002
 | NC    |     7 |
 | NJ    |     8 |
 | PA    |    10 |
+
+States that were observed at 7 or more locations in 2010:
 
 ``` r
 In2010 <-
@@ -302,13 +309,16 @@ ExcellentResp <-
 ``` r
 ExcellentResp%>%
   ggplot(aes(x = year, y = state_average, color = state)) + 
-    geom_point() + geom_line() + 
-    theme(legend.position = "right")
+  geom_point() + geom_line() + 
+  theme(legend.position = "right") + 
+  labs(title = "Average data_values over Time in States",
+       x = "Year",
+       y = "State Average")
 ```
 
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
 
-**3.**Make a two-panel plot showing, for the years 2006, and 2010,
+**3.** Make a two-panel plot showing, for the years 2006, and 2010,
 distribution of `data_value` for responses (“Poor” to “Excellent”) among
 locations in NY State.
 
@@ -320,7 +330,8 @@ filter(tidyBRFSS, year == 2006 | year == 2010)%>%
   geom_density(alpha = .5) + 
   facet_grid(~year) + 
   scale_x_continuous(limits = c(0, 50)) +
-  viridis::scale_fill_viridis(discrete = TRUE)
+  viridis::scale_fill_viridis(discrete = TRUE) +
+  labs(title = "Distribution of data_value in NY")
 ```
 
 <img src="p8105_hw3_zz2899_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
@@ -416,14 +427,14 @@ graph.
 
 ``` r
 accel_data%>%
-  ggplot(aes(x = activity_counts, y = activity, color = day, fill = day))+
+  ggplot(aes(x = activity_counts, y = activity, color = day))+
   geom_smooth(se = FALSE) +
   scale_x_continuous(
     breaks = c(0, 120, 240, 360, 480, 600, 720, 840, 960, 1080, 1200, 1320, 1440), 
     labels = c("0", "2", "4", "6", "8", "10", "12", "14", "16", "18", "20", "22", "24"),
     limits = c(0, 1440)) +
   labs(
-    title = "Activity over the day",
+    title = "Activity over the Day",
     x = "Hours",
     y = "Activity")
 ```
